use local assets

--- a/email-signature.html
+++ b/email-signature.html
@@ -11,8 +11,8 @@
         style="width: 550px; font-family: Arial, sans-serif; color: #2B2147;">
         <tr aria-label="Signature Row">
             <td aria-label="Picture Column" width="125" style="vertical-align: top; padding: 12px;">
-                <img src="https://i.ibb.co/qFYY03tZ/display-picture.jpg" alt="Nouvelle L. Gonzalo" width="125"
-                    height="180" style="display: block; border-radius: 8px; border: 1px solid #DCC3A1;">
+                <img src="./assets/display-picture.jpg" alt="Nouvelle L. Gonzalo" width="125" height="180"
+                    style="display: block; border-radius: 8px; border: 1px solid #DCC3A1;">
             </td>
             <td aria-label="Text Column"
                 style="vertical-align: top; padding-right: 12px; padding-top: 12px; padding-bottom: 12px;">
@@ -42,32 +42,32 @@
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/vgDUcPe"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location" width="12"
-                                                height="12" style="vertical-align: middle;"> Miami
+                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                                style="vertical-align: middle;"> Miami
                                         </a>
                                     </td>
                                     <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/S851p8W"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location" width="12"
-                                                height="12" style="vertical-align: middle;"> New York
+                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                                style="vertical-align: middle;"> New York
                                         </a>
                                     </td>
                                     <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/jTj2vhc"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location" width="12"
-                                                height="12" style="vertical-align: middle;"> Cleveland
+                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                                style="vertical-align: middle;"> Cleveland
                                         </a>
                                     </td>
                                     <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/a2TwkR7"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://i.ibb.co/0jkqzSsr/pin-icon.jpg" alt="Location" width="12"
-                                                height="12" style="vertical-align: middle;"> Gainesville
+                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                                style="vertical-align: middle;"> Gainesville
                                         </a>
                                     </td>
                                 </tr>
@@ -85,12 +85,11 @@
                                             style="border-radius: 4px; margin-bottom: 8px;">
                                             <tr aria-label="Award Badge Item Row">
                                                 <td style="white-space: nowrap;">
-                                                    <img src="https://i.ibb.co/sJWtMpRw/award-icon.jpg"
-                                                        alt="Super Lawyers" width="14" height="14"
-                                                        style="vertical-align: middle;">
+                                                    <img src="./assets/award-icon.jpg" alt="Super Lawyers" width="14"
+                                                        height="14" style="vertical-align: middle;">
                                                     <span
                                                         style="font-size: 11px; color: #2B2147; padding-left: 4px;">Super
-                                                        Lawyers Selectee</span>
+                                                        Lawyers Awardee</span>
                                                 </td>
                                             </tr>
                                         </table>
@@ -98,12 +97,12 @@
                                             style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="https://i.ibb.co/sJWtMpRw/award-icon.jpg"
-                                                        alt="Super Lawyers" width="14" height="14"
-                                                        style="vertical-align: middle;">
+                                                    <img src="./assets/award-icon.jpg" alt="Super Lawyers" width="14"
+                                                        height="14" style="vertical-align: middle;">
                                                     <span
-                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">Super
-                                                        Lawyers Selectee</span>
+                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">100
+                                                        Most
+                                                        Influential Women</span>
                                                 </td>
                                             </tr>
                                         </table>
@@ -114,8 +113,8 @@
                                             style="border-radius: 4px; margin-bottom: 8px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="https://i.ibb.co/3m8LqhZN/play-icon.jpg" alt="Bloomberg"
-                                                        width="14" height="14" style="vertical-align: middle;">
+                                                    <img src="./assets/play-icon.jpg" alt="Bloomberg" width="14"
+                                                        height="14" style="vertical-align: middle;">
                                                     <span style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
                                                         seen on Bloomberg</span>
                                                 </td>
@@ -125,10 +124,11 @@
                                             style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="https://i.ibb.co/3m8LqhZN/play-icon.jpg" alt="Bloomberg"
-                                                        width="14" height="14" style="vertical-align: middle;">
-                                                    <span style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
-                                                        seen on Bloomberg</span>
+                                                    <img src="./assets/play-icon.jpg" alt="Bloomberg" width="14"
+                                                        height="14" style="vertical-align: middle;">
+                                                    <span
+                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">Learn
+                                                        about our Pro-Bono Law Program</span>
                                                 </td>
                                             </tr>
                                         </table>
@@ -144,7 +144,7 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://gonzalolaw.com/" target="_blank">
-                                <img src="https://i.ibb.co/k2tW6Q3K/globe-icon.jpg" alt="Website" width="16" height="16"
+                                <img src="./assets/globe-icon.jpg" alt="Website" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -152,31 +152,31 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank">
-                                <img src="https://i.ibb.co/4RwL7Dtp/linkedin-icon.jpg" alt="LinkedIn" width="16"
-                                    height="16" style="display: block;">
+                                <img src="./assets/linkedin-icon.jpg" alt="LinkedIn" width="16" height="16"
+                                    style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank">
-                                <img src="https://i.ibb.co/XfsmmcN5/insta-icon.jpg" alt="Instagram" width="16"
-                                    height="16" style="display: block;">
+                                <img src="./assets/insta-icon.jpg" alt="Instagram" width="16" height="16"
+                                    style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation=1" target="_blank">
-                                <img src="https://i.ibb.co/qYhdqBs1/youtube-icon.jpg" alt="YouTube" width="16"
-                                    height="16" style="display: block;">
+                                <img src="./assets/youtube-icon.jpg" alt="YouTube" width="16" height="16"
+                                    style="display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="tel:1-855-466-9256" target="_blank">
-                                <img src="https://i.ibb.co/356yBq0D/phone-icon.jpg" alt="Phone" width="16" height="16"
+                                <img src="./assets/phone-icon.jpg" alt="Phone" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -184,7 +184,7 @@
                     <tr>
                         <td>
                             <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank">
-                                <img src="https://i.ibb.co/MvsWmCm/email-icon.jpg" alt="Email" width="16" height="16"
+                                <img src="./assets/email-icon.jpg" alt="Email" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
