feat: add the info icon back

--- a/email-signature.html
+++ b/email-signature.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Email Signature</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
 </head>
 
-<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
+<body style="margin: 0; padding: 0; font-family: Poppins, sans-serif;">
     <table cellpadding="0" cellspacing="0" border="0"
-        style="width: 550px; font-family: Arial, sans-serif; color: #2B2147;">
+        style="width: 550px; font-family: Poppins, sans-serif; color: #2B2147;">
         <tr aria-label="Signature Row">
             <td aria-label="Picture Column" width="125" style="vertical-align: top; padding: 12px;">
-                <img src="./assets/display-picture.jpg" alt="Nouvelle L. Gonzalo" width="125" height="180"
+                <img src="https://iili.io/3TLDrSj.jpg" alt="Nouvelle L. Gonzalo" width="125" height="180"
                     style="display: block; border-radius: 8px; border: 1px solid #DCC3A1;">
             </td>
             <td aria-label="Text Column"
@@ -36,13 +37,13 @@
                         </td>
                     </tr>
                     <tr aria-label="Location Row">
-                        <td style="padding-bottom: 12px;">
+                        <td style="padding-bottom: 8px; padding-top: 8px;">
                             <table aria-label="Location Table" cellpadding="0" cellspacing="0" border="0">
                                 <tr aria-label="Location Item Row">
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/vgDUcPe"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
                                                 style="vertical-align: middle;"> Miami
                                         </a>
                                     </td>
@@ -50,7 +51,7 @@
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/S851p8W"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
                                                 style="vertical-align: middle;"> New York
                                         </a>
                                     </td>
@@ -58,7 +59,7 @@
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/jTj2vhc"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
                                                 style="vertical-align: middle;"> Cleveland
                                         </a>
                                     </td>
@@ -66,7 +67,7 @@
                                     <td aria-label="Location Item" style="white-space: nowrap;">
                                         <a href="https://g.co/kgs/a2TwkR7"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="./assets/pin-icon.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
                                                 style="vertical-align: middle;"> Gainesville
                                         </a>
                                     </td>
@@ -85,8 +86,8 @@
                                             style="border-radius: 4px; margin-bottom: 8px;">
                                             <tr aria-label="Award Badge Item Row">
                                                 <td style="white-space: nowrap;">
-                                                    <img src="./assets/award-icon.jpg" alt="Super Lawyers" width="14"
-                                                        height="14" style="vertical-align: middle;">
+                                                    <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
+                                                        width="14" height="14" style="vertical-align: middle;">
                                                     <span
                                                         style="font-size: 11px; color: #2B2147; padding-left: 4px;">Super
                                                         Lawyers Awardee</span>
@@ -97,8 +98,8 @@
                                             style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="./assets/award-icon.jpg" alt="Super Lawyers" width="14"
-                                                        height="14" style="vertical-align: middle;">
+                                                    <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
+                                                        width="14" height="14" style="vertical-align: middle;">
                                                     <span
                                                         style="font-size: 11px; color: #2B2147; padding-left: 4px;">100
                                                         Most
@@ -113,10 +114,14 @@
                                             style="border-radius: 4px; margin-bottom: 8px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="./assets/play-icon.jpg" alt="Bloomberg" width="14"
-                                                        height="14" style="vertical-align: middle;">
-                                                    <span style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
-                                                        seen on Bloomberg</span>
+                                                    <a href="https://youtu.be/QkpH94lSvXs?si=2wxHwgm8LorSLLqm"
+                                                        target="_blank" style="text-decoration: none; color: #2B2147;">
+                                                        <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
+                                                            width="14" height="14" style="vertical-align: middle;">
+                                                        <span
+                                                            style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
+                                                            seen on Bloomberg</span>
+                                                    </a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -124,11 +129,14 @@
                                             style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
-                                                    <img src="./assets/play-icon.jpg" alt="Bloomberg" width="14"
-                                                        height="14" style="vertical-align: middle;">
-                                                    <span
-                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">Learn
-                                                        about our Pro-Bono Law Program</span>
+                                                    <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                                                        target="_blank" style="text-decoration: none; color: #2B2147;">
+                                                        <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
+                                                            width="14" height="14" style="vertical-align: middle;">
+                                                        <span
+                                                            style="font-size: 11px; color: #2B2147; padding-left: 4px;">Learn
+                                                            about our Pro-Bono Law Program</span>
+                                                    </a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -143,8 +151,17 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="padding-bottom: 8px;">
+                            <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view"
+                                target="_blank">
+                                <img src="https://iili.io/3TLDvV9.jpg" alt="Info" width="16" height="16"
+                                    style="display: block;">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-bottom: 8px;">
                             <a href="https://gonzalolaw.com/" target="_blank">
-                                <img src="./assets/globe-icon.jpg" alt="Website" width="16" height="16"
+                                <img src="https://iili.io/3TLD8Pe.jpg" alt="Website" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -152,7 +169,7 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank">
-                                <img src="./assets/linkedin-icon.jpg" alt="LinkedIn" width="16" height="16"
+                                <img src="https://iili.io/3TLDOtS.jpg" alt="LinkedIn" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -160,7 +177,7 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank">
-                                <img src="./assets/insta-icon.jpg" alt="Instagram" width="16" height="16"
+                                <img src="https://iili.io/3TLDko7.jpg" alt="Instagram" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -168,7 +185,7 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation=1" target="_blank">
-                                <img src="./assets/youtube-icon.jpg" alt="YouTube" width="16" height="16"
+                                <img src="https://iili.io/3TLDXSf.jpg" alt="YouTube" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -176,7 +193,7 @@
                     <tr>
                         <td style="padding-bottom: 8px;">
                             <a href="tel:1-855-466-9256" target="_blank">
-                                <img src="./assets/phone-icon.jpg" alt="Phone" width="16" height="16"
+                                <img src="https://iili.io/3TLDGPn.jpg" alt="Phone" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
@@ -184,7 +201,7 @@
                     <tr>
                         <td>
                             <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank">
-                                <img src="./assets/email-icon.jpg" alt="Email" width="16" height="16"
+                                <img src="https://iili.io/3TLDUKu.jpg" alt="Email" width="16" height="16"
                                     style="display: block;">
                             </a>
                         </td>
