separate service cells

--- a/email-signature.html
+++ b/email-signature.html
@@ -26,48 +26,67 @@
                     </tr>
                     <tr aria-label="Title Row">
                         <td style="padding-bottom: 2px;">
-                            <span style="font-size: 14px; color: #EE8C3A; display: block;">Founder and Managing
+                            <span style="font-size: 14px; color: #2B2147; display: block;">Founder and Managing
                                 Attorney</span>
+                        </td>
+                    </tr>
+                    <tr aria-label="Company Row">
+                        <td style="padding-bottom: 2px;">
+                            <span style="font-size: 14px; color: #EE8C3A; display: block;">Gonzalo Law PLLC</span>
                         </td>
                     </tr>
                     <tr aria-label="Services Row">
                         <td style="padding-bottom: 8px;">
-                            <span style="font-size: 12px; color: #2B2147;">International | Non-Profits | Contracts |
-                                M&A</span>
+                            <table cellpadding="0" cellspacing="0" border="0">
+                                <tr>
+                                    <td style="white-space: nowrap;">
+                                        <span style="font-size: 12px; color: #2B2147;">International</span>
+                                    </td>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="font-size: 12px; color: #2B2147;">Non-Profits</span>
+                                    </td>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="font-size: 12px; color: #2B2147;">Contracts</span>
+                                    </td>
+                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="font-size: 12px; color: #2B2147;">M&A</span>
+                                    </td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
                     <tr aria-label="Location Row">
-                        <td style="padding-bottom: 8px; padding-top: 8px;">
+                        <td style="padding-bottom: 6px; padding-top: 6px;">
                             <table aria-label="Location Table" cellpadding="0" cellspacing="0" border="0">
                                 <tr aria-label="Location Item Row">
-                                    <td aria-label="Location Item" style="white-space: nowrap;">
+                                    <td aria-label="Location Item" style="white-space: nowrap; ">
                                         <a href="https://g.co/kgs/vgDUcPe"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
                                                 style="vertical-align: middle;"> Miami
                                         </a>
                                     </td>
-                                    <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
-                                    <td aria-label="Location Item" style="white-space: nowrap;">
+                                    <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/S851p8W"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
                                                 style="vertical-align: middle;"> New York
                                         </a>
                                     </td>
-                                    <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
-                                    <td aria-label="Location Item" style="white-space: nowrap;">
+                                    <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/jTj2vhc"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
                                                 style="vertical-align: middle;"> Cleveland
                                         </a>
                                     </td>
-                                    <td aria-label="Location Separator" style="padding: 0 4px; color: #2B2147;">|</td>
-                                    <td aria-label="Location Item" style="white-space: nowrap;">
+                                    <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/a2TwkR7"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
-                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="12" height="12"
+                                            <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
                                                 style="vertical-align: middle;"> Gainesville
                                         </a>
                                     </td>
@@ -120,7 +139,7 @@
                                                             width="14" height="14" style="vertical-align: middle;">
                                                         <span
                                                             style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
-                                                            seen on Bloomberg</span>
+                                                            seen on Bloomberg Business</span>
                                                     </a>
                                                 </td>
                                             </tr>
