--- a/email-signature.html
+++ b/email-signature.html
@@ -20,74 +20,76 @@
                 <table aria-label="Text Table" cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
                     <tr aria-label="Name Row">
                         <td style="padding-bottom: 2px;">
-                            <span style="font-size: 20px; font-weight: bold; color: #2B2147; display: block;">Nouvelle
+                            <span
+                                style="font-size: 20px; line-height: 1; font-weight: bold; color: #2B2147; display: block;">Nouvelle
                                 L. Gonzalo, Esq.</span>
                         </td>
                     </tr>
                     <tr aria-label="Title Row">
                         <td style="padding-bottom: 2px;">
-                            <span style="font-size: 14px; color: #2B2147; display: block;">Founder and Managing
+                            <span style="font-size: 12px; color: #2B2147; line-height: 1;">Founder and Managing
                                 Attorney</span>
                         </td>
                     </tr>
                     <tr aria-label="Company Row">
                         <td style="padding-bottom: 2px;">
-                            <span style="font-size: 14px; color: #EE8C3A; display: block;">Gonzalo Law PLLC</span>
+                            <span style="font-size: 11px; color: #EE8C3A; display: block;">Gonzalo Law PLLC</span>
                         </td>
                     </tr>
                     <tr aria-label="Services Row">
-                        <td style="padding-bottom: 8px;">
+                        <td style="padding-top: 4px; padding-bottom: 4px; font-size: 12px; color: #2B2147;">
                             <table cellpadding="0" cellspacing="0" border="0">
-                                <tr>
+                                <tr style="">
                                     <td style="white-space: nowrap;">
-                                        <span style="font-size: 12px; color: #2B2147;">International</span>
+                                        <span style="padding-right: 4px;">International</span>
+                                    </td>
+                                    <td style="padding: 0 4px; color: #2B2147;">|
+                                    </td>
+                                    <td style="white-space: nowrap;">
+                                        <span style="padding-left: 4px; padding-right: 4px;">Non-Profits</span>
                                     </td>
                                     <td style="padding: 0 4px; color: #2B2147;">|</td>
                                     <td style="white-space: nowrap;">
-                                        <span style="font-size: 12px; color: #2B2147;">Non-Profits</span>
+                                        <span style="padding-left: 4px; padding-right: 4px;">Contracts</span>
                                     </td>
                                     <td style="padding: 0 4px; color: #2B2147;">|</td>
                                     <td style="white-space: nowrap;">
-                                        <span style="font-size: 12px; color: #2B2147;">Contracts</span>
-                                    </td>
-                                    <td style="padding: 0 4px; color: #2B2147;">|</td>
-                                    <td style="white-space: nowrap;">
-                                        <span style="font-size: 12px; color: #2B2147;">M&A</span>
+                                        <span style="padding-left: 4px; padding-right: 4px;">M&A</span>
                                     </td>
                                 </tr>
                             </table>
                         </td>
                     </tr>
                     <tr aria-label="Location Row">
-                        <td style="padding-bottom: 6px; padding-top: 6px;">
+                        <td style="padding-bottom: 1px; padding-top: 1px;">
                             <table aria-label="Location Table" cellpadding="0" cellspacing="0" border="0">
                                 <tr aria-label="Location Item Row">
-                                    <td aria-label="Location Item" style="white-space: nowrap; ">
+                                    <td aria-label="Location Item" style="white-space: nowrap; padding-right: 4px;">
                                         <a href="https://g.co/kgs/vgDUcPe"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
                                             <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
-                                                style="vertical-align: middle;"> Miami
+                                                style="vertical-align: middle; padding-right: 2px;"> Miami
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/S851p8W"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
                                             <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
-                                                style="vertical-align: middle;"> New York
+                                                style="vertical-align: middle; padding-right: 2px;"> New York
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/jTj2vhc"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
                                             <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
-                                                style="vertical-align: middle;"> Cleveland
+                                                style="vertical-align: middle; padding-right: 2px;"> Cleveland
                                         </a>
                                     </td>
                                     <td aria-label="Location Item" style="white-space: nowrap; padding-left: 8px;">
                                         <a href="https://g.co/kgs/a2TwkR7"
                                             style="color: #2B2147; text-decoration: none; font-size: 10px;">
                                             <img src="https://iili.io/3TLDVFs.jpg" alt="Location" width="10" height="13"
-                                                style="vertical-align: middle;"> Gainesville
+                                                style="vertical-align: middle; padding-right: 2px;"> Gainesville
                                         </a>
                                     </td>
                                 </tr>
@@ -95,32 +97,30 @@
                         </td>
                     </tr>
                     <tr aria-label="Badges Container Row">
-                        <td style="padding-top: 12px; vertical-align: bottom;">
+                        <td style="padding-top: 8px; vertical-align: bottom;">
                             <table aria-label="Badges Table" cellpadding="0" cellspacing="0" border="0">
                                 <tr aria-label="Badges Item Content Row">
                                     <!-- First Column: Award Badges -->
                                     <td aria-label="Award Badges Column" style="padding-right: 8px;">
-                                        <table aria-label="Award Badges Table" cellpadding="4" cellspacing="0"
-                                            border="0" bgcolor="#F9F6F2"
-                                            style="border-radius: 4px; margin-bottom: 8px;">
+                                        <table aria-label="Award Badges Table" cellspacing="0" border="0"
+                                            style="border-radius: 4px; margin-bottom: 4px;">
                                             <tr aria-label="Award Badge Item Row">
-                                                <td style="white-space: nowrap;">
+                                                <td style="white-space: nowrap; padding-right: 4px;">
                                                     <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
                                                         width="14" height="14" style="vertical-align: middle;">
                                                     <span
-                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">Super
+                                                        style="font-size: 10px; color: #2B2147; padding-left: 4px;">Super
                                                         Lawyers Awardee</span>
                                                 </td>
                                             </tr>
                                         </table>
-                                        <table cellpadding="4" cellspacing="0" border="0" bgcolor="#F9F6F2"
-                                            style="border-radius: 4px;">
+                                        <table cellspacing="0" border="0" style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
                                                     <img src="https://iili.io/3TLDgcb.jpg" alt="Super Lawyers"
                                                         width="14" height="14" style="vertical-align: middle;">
                                                     <span
-                                                        style="font-size: 11px; color: #2B2147; padding-left: 4px;">100
+                                                        style="font-size: 10px; color: #2B2147; padding-left: 4px;">100
                                                         Most
                                                         Influential Women</span>
                                                 </td>
@@ -129,8 +129,8 @@
                                     </td>
                                     <!-- Second Column: Play Icon Badges -->
                                     <td aria-label="Play Icon Badges Column">
-                                        <table cellpadding="4" cellspacing="0" border="0" bgcolor="#F9F6F2"
-                                            style="border-radius: 4px; margin-bottom: 8px;">
+                                        <table cellspacing="0" border="0"
+                                            style="border-radius: 4px; margin-bottom: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
                                                     <a href="https://youtu.be/QkpH94lSvXs?si=2wxHwgm8LorSLLqm"
@@ -138,14 +138,13 @@
                                                         <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
                                                             width="14" height="14" style="vertical-align: middle;">
                                                         <span
-                                                            style="font-size: 11px; color: #2B2147; padding-left: 4px;">As
+                                                            style="font-size: 10px; color: #2B2147; padding-left: 4px;">As
                                                             seen on Bloomberg Business</span>
                                                     </a>
                                                 </td>
                                             </tr>
                                         </table>
-                                        <table cellpadding="4" cellspacing="0" border="0" bgcolor="#F9F6F2"
-                                            style="border-radius: 4px;">
+                                        <table cellspacing="0" border="0" style="border-radius: 4px;">
                                             <tr>
                                                 <td style="white-space: nowrap;">
                                                     <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
@@ -153,7 +152,7 @@
                                                         <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
                                                             width="14" height="14" style="vertical-align: middle;">
                                                         <span
-                                                            style="font-size: 11px; color: #2B2147; padding-left: 4px;">Learn
+                                                            style="font-size: 10px; color: #2B2147; padding-left: 4px;">Learn
                                                             about our Pro-Bono Law Program</span>
                                                     </a>
                                                 </td>
@@ -230,7 +229,7 @@
         </tr>
         <tr aria-label="Disclaimer Row">
             <td colspan="3" style="padding: 12px; padding-top: 0px;">
-                <p style="font-size: 10px; color: #2B2147; font-style: italic; margin: 0;">
+                <p style="font-size: 10px; color: #2b2147ad; font-style: italic; margin: 0;">
                     <strong>Disclaimer:</strong> The contents of this email and any attachments are confidential. They
                     are intended for the named recipient(s) only. If you have received this email by mistake, please
                     notify the sender immediately and do not disclose the contents to anyone or make copies thereof.
