reduce overall padding

--- a/email-signature.html
+++ b/email-signature.html
@@ -11,12 +11,12 @@
     <table cellpadding="0" cellspacing="0" border="0"
         style="width: 550px; font-family: Poppins, sans-serif; color: #2B2147;">
         <tr aria-label="Signature Row">
-            <td aria-label="Picture Column" width="125" style="vertical-align: top; padding: 12px;">
+            <td aria-label="Picture Column" width="125" style="vertical-align: top; padding: 10px; padding-left: 0px; ">
                 <img src="https://iili.io/3TLDrSj.jpg" alt="Nouvelle L. Gonzalo" width="125" height="180"
                     style="display: block; border-radius: 8px; border: 1px solid #DCC3A1;">
             </td>
             <td aria-label="Text Column"
-                style="vertical-align: top; padding-right: 12px; padding-top: 12px; padding-bottom: 12px;">
+                style="vertical-align: top; padding-right: 10px; padding-top: 12px; padding-bottom: 12px;">
                 <table aria-label="Text Table" cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
                     <tr aria-label="Name Row">
                         <td style="padding-bottom: 2px;">
@@ -229,7 +229,7 @@
             </td>
         </tr>
         <tr aria-label="Disclaimer Row">
-            <td colspan="3" style="padding: 12px; padding-top: 0px;">
+            <td colspan="3" style="padding: 10px; padding-left: 0px; padding-top: 0px;">
                 <p style="font-size: 10px; color: #2b2147ad; font-style: italic; margin: 0;">
                     <strong>Disclaimer:</strong> The contents of this email and any attachments are confidential. They
                     are intended for the named recipient(s) only. If you have received this email by mistake, please
