remove longt text

--- a/email-signature.html
+++ b/email-signature.html
@@ -152,8 +152,8 @@
                                                         <img src="https://iili.io/3TLDWcG.jpg" alt="Bloomberg"
                                                             width="14" height="14" style="vertical-align: middle;">
                                                         <span
-                                                            style="font-size: 10px; color: #2B2147; padding-left: 4px;">Learn
-                                                            about our Pro-Bono Law Program</span>
+                                                            style="font-size: 10px; color: #2B2147; padding-left: 4px;">About
+                                                            our Pro-Bono Law Program</span>
                                                     </a>
                                                 </td>
                                             </tr>
